# tempo-k8s-operator

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  HACKING.md  README.md  REPRO.md  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini  tracegen.py
.github/: renovate-config.js
.github/workflows/: build-and-test.yaml  issues.yaml  publish-oci.yaml  pull-request.yaml  release.yaml  renovate.yaml  update-libs.yaml  update-oci.yaml
scripts/: get_charm_states.py  states.py  tracegen.py
src/: charm.py  coordinator.py  nginx.py  tempo.py  tempo_cluster.py
src/grafana_dashboards/: tempo.json  tempo.json.tmpl
src/loki_alert_rules/: .gitkeep  alerts.yaml  error_level_logs_found.rule  rules.yaml
src/prometheus_alert_rules/: alerts.yaml  tempo_block_list_rising_quickly.rule  tempo_compactions_failing.rule  tempo_compactor_unhealthy.rule  tempo_compactors_too_many_outstanding_blocks.rule  tempo_discarded_spans.rule  tempo_distributor_push_latency.rule  tempo_distributor_unhealthy.rule  tempo_failed_ingesting_requests.rule  tempo_frontend_clients.rule  tempo_frontend_queue_latency.rule  tempo_ingester_flush_latency.rule  tempo_ingester_flushes_failing.rule  tempo_ingester_flushes_unhealthy.rule  tempo_ingesters_unhealthy.rule  tempo_kv_latency.rule  tempo_kv_request_errors.rule  tempo_missing.rule  tempo_no_tenant_index_builders.rule  tempo_request_errors.rule  tempo_request_latency.rule  tempo_retentions_failing.rule  tempo_tcp_connections_limit.rule  tempo_tenant_index_too_old.rule  (+1 more)
tests/catan/: test_clustering.py
(+65 files in other folders)
